src/test/ui/resolve/resolve-self-in-impl.stderr
error: `Self` is not valid at this location
  --> $DIR/resolve-self-in-impl.rs:14:13
   |
LL | impl Tr for Self {}
   |             ^^^^

error: `Self` is not valid at this location
  --> $DIR/resolve-self-in-impl.rs:15:13
   |
LL | impl Tr for S<Self> {}
   |             ^^^^^^^

error: `Self` is not valid at this location
  --> $DIR/resolve-self-in-impl.rs:16:6
   |
LL | impl Self {}
   |      ^^^^

error: `Self` is not valid at this location
  --> $DIR/resolve-self-in-impl.rs:17:6
   |
LL | impl S<Self> {}
   |      ^^^^^^^

error[E0391]: cycle detected when computing trait implemented by `<impl at $DIR/resolve-self-in-impl.rs:18:1: 18:23>`
  --> $DIR/resolve-self-in-impl.rs:18:1
   |
LL | impl Tr<Self::A> for S {}
   | ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: ...which immediately requires computing trait implemented by `<impl at $DIR/resolve-self-in-impl.rs:18:1: 18:23>` again
note: cycle used when collecting item types in top-level module
  --> $DIR/resolve-self-in-impl.rs:1:1
   |
LL | / #![feature(associated_type_defaults)]
LL | |
LL | | struct S<T = u8>(T);
LL | | trait Tr<T = u8> {
...  |
LL | |
LL | | fn main() {}
   | |____________^

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0391`.
